--- a/Home.html
+++ b/Home.html
@@ -2,87 +2,10 @@
 <html>
 <head>
 <title>Home</title>
-  <style>
-  *{font-family:Verdana;font-size:20px;}
-  body{
-      background-image:url(Background2.jpg); 
-      background-repeat:no-repeat;
-      background-size:cover;
-      background-attachment:fixed;
-      }
-  ul{
-      position:fixed;
-      right:250px;
-      box-shadow:5px 5px 8px black;
-      border-radius:20px;
-      background:rgba(72, 72, 190, 0.3);
-      padding:10px;
-      }
-  li{
-      display:inline;
-      padding:20px;
-      }
-  #sign{
-      float:right;
-      margin:20px;
-      background:navy;
-      border-radius:20px 0;
-      padding:8px;
-      box-shadow:5px 5px 8px black;
-      text-decoration:none;
-      color:lightblue;    
-      }
-      #sign:hover{background-color:blue;color:gold}
-      #sign:active{box-shadow:5px 3px 8px black;}
-      li a{text-decoration:none}
-      li a:link{color:white}  
-      li a:hover{color:gold;text-decoration:underline;text-shadow:1px 1px 5px yellowgreen;}
-      li a:active{color:goldenrod}
-      li a:visited{color:gray}
-      img{
-          width:400px;
-          margin-left:50px;
-          margin-top:110px;
-          position:fixed;
-          } 
-      div{
-          color:white;
-          margin:180px;position:absolute;
-          width:500px;
-          right:80px;
-          padding:50px;
-          background:rgba(130, 130, 233, 0.2);
-          text-align:center;
-          border-radius:70px;
-          }
-      h1{
-          font-family:'Times New Roman';
-          font-style:oblique;
-          font-size: 40px;
-          letter-spacing:5px;
-          word-spacing: 10pz;
-          line-height:70px}
-      #download{
-      margin:20px;
-      background:white;
-      border:3px outset red;
-      border-radius:30px;
-      padding:15px 20px;
-      box-shadow:8px 8px 8px black;
-      text-decoration:none;    
-      }
-      #download:hover{background-color:blue; 
-      color:gold;
-      border:3px inset yellow;}
-      #download:active{box-shadow:5px 5px 8px black}
-      li a{text-decoration:none}
-      li a:link{color:white}  
-      li a:hover{color:gold;text-decoration:underline;text-shadow:1px 1px 5px yellowgreen;}
-      li a:active{color:goldenrod}
-      li a:visited{color:gray}
-  </style>
+<link type="text/css" rel="stylesheet" href="MyStyle.css">
 </head>
 <body>
+  <img id="background" src="Background3.jpg">
   <ul>
     <li><a href="">Home</a></li>
     <li><a href="">About</a></li>
@@ -94,10 +17,13 @@
     <li><a href="">Contacts</a></li>
   </ul>
   <a id="sign" href="">Sign up</a>
-  <img src="iphone2.png">
+  <img id="phone" src="iphone2.png">
   <div>
     <h1>Start your amazing stuff through appy.</h1>
+    <br/>
+    <br/>
     <a id="download" href=""><strong>DOWNLOAD NOW</strong></a>
+   <p>A beautiful app for consectur adipisicing eelite, sed do eiusmod tempor incididunt ut mollit anim id est laborum. Sedut</p>
   </div>
 </body>
 </html>
