--- a/Home.html
+++ b/Home.html
@@ -23,7 +23,7 @@
     <br/>
     <br/>
     <a id="download" href=""><strong>DOWNLOAD NOW</strong></a>
-   <p>A beautiful app for consectur adipisicing eelite, sed do eiusmod tempor incididunt ut mollit anim id est laborum. Sedut</p>
+   <p>A beautiful app for consectur adipisicing eelite, sed do eiusmod <br/>tempor incididunt ut mollit anim id est laborum. Sedut</p>
   </div>
 </body>
 </html>
