code re-factored

--- a/Home.html
+++ b/Home.html
@@ -1,29 +1,49 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<title>Home</title>
-<link type="text/css" rel="stylesheet" href="MyStyle.css">
+  <title>Home</title>
+  <link type="text/css" rel="stylesheet" href="MyStyle.css">
 </head>
+
 <body>
-  <img id="background" src="Background3.jpg">
-  <ul>
-    <li><a href="">Home</a></li>
-    <li><a href="">About</a></li>
-    <li><a href="">Features</a></li>
-    <li><a href="">Gallery</a></li>
-    <li><a href="">Pricing</a></li>
-    <li><a href="">FAQ</a></li>
-    <li><a href="">Blog</a></li>
-    <li><a href="">Contacts</a></li>
-  </ul>
-  <a id="sign" href="">Sign up</a>
-  <img id="phone" src="iphone2.png">
-  <div>
-    <h1>Start your amazing stuff through appy.</h1>
-    <br/>
-    <br/>
-    <a id="download" href=""><strong>DOWNLOAD NOW</strong></a>
-   <p>A beautiful app for consectur adipisicing eelite, sed do eiusmod <br/>tempor incididunt ut mollit anim id est laborum. Sedut</p>
+  <div id="TopContainer">
+    <div class="page-width">
+      <!-- <img id="background" src="Background3.jpg"> -->
+      <div id="TopNavBar">
+        <ul>
+          <li><a href="">Home</a></li>
+          <li><a href="">About</a></li>
+          <li><a href="">Features</a></li>
+          <li><a href="">Gallery</a></li>
+          <li><a href="">Pricing</a></li>
+          <li><a href="">FAQ</a></li>
+          <li><a href="">Blog</a></li>
+          <li><a href="">Contacts</a></li>
+        </ul>
+      </div>
+      <div id="TopAreaBody"><a id="sign" href="">Sign up</a>
+        <div class="content-block">
+          <img id="phone" src="iphone2.png">
+        </div>
+        <div class="content-block main-msg">
+          <div>
+            <h1>Start your amazing stuff through appy.</h1>
+            <br />
+            <br />
+            <a id="download" href=""><strong>DOWNLOAD NOW</strong></a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </div>
+  <div id="BodySection">
+    <div class="page-width wrapper">
+      <p>A beautiful app for consectur adipisicing eelite, sed do eiusmod <br />tempor incididunt ut mollit anim id est
+        laborum. Sedut</p>
+    </div>
   </div>
 </body>
+
 </html>
